AM_CXXFLAGS = @AM_CXXFLAGS@ -I$(top_srcdir)/common
bin_PROGRAMS = dfsd
dfsd_SOURCES = main.cpp ../common/configure.cpp configure.cpp daemon.cpp
dfsd_LDADD = $(BOOST_SYSTEM_LIBS) $(BOOST_PROGRAM_OPTIONS_LIBS) $(BOOST_FILESYSTEM_LIBS) $(BOOST_THREAD_LIBS) $(BOOST_LOG_LIBS)
dfsd_LDFLAGS = $(BOOST_SYSTEM_LDFLAGS) $(BOOST_PROGRAM_OPTIONS_LDFLAGS) $(BOOST_FILESYSTEM_LDFLAGS) $(BOOST_THREAD_LDFLAGS) $(BOOST_LOG_LDFLAGS)
