check_PROGRAMS = comms
comms_SOURCES = comms-test.cpp ../comms.cpp ../configure.cpp ../../common/configure.cpp

comms_CPPFLAGS = $(BOOST_CPPFLAGS)
comms_LDADD = $(BOOST_SYSTEM_LIBS) $(BOOST_FILESYSTEM_LIBS) $(BOOST_PROGRAM_OPTIONS_LIBS) $(BOOST_UNIT_TEST_FRAMEWORK_LIBS)
comms_LDFLAGS = $(BOOST_SYSTEM_LDFLAGS) $(BOOST_FILESYSTEM_LDFLAGS) $(BOOST_PROGRAM_OPTIONS_LDFLAGS) $(BOOST_UNIT_TEST_FRAMEWORK_LDFLAGS)

TESTS = $(check_PROGRAMS)
