check_PROGRAMS = remcon connection_pool dispatch raftlog
remcon_SOURCES = remcon-test.cpp ../remcon.cpp

remcon_LDADD = $(BOOST_SYSTEM_LIBS) $(BOOST_UNIT_TEST_FRAMEWORK_LIBS) $(BOOST_LOG_LIBS)
remcon_LDFLAGS = $(BOOST_SYSTEM_LDFLAGS) $(BOOST_UNIT_TEST_FRAMEWORK_LDFLAGS) $(BOOST_LOG_LDADD)

connection_pool_SOURCES = connection_pool-test.cpp

connection_pool_LDADD = $(BOOST_SYSTEM_LIBS) $(BOOST_UNIT_TEST_FRAMEWORK_LIBS)
connection_pool_LDFLAGS = $(BOOST_SYSTEM_LDFLAGS) $(BOOST_UNIT_TEST_FRAMEWORK_LDFLAGS)

dispatch_SOURCES = dispatch-test.cpp

dispatch_CPPFLAGS = $(BOOST_CPPFLAGS) $(JSONCPP_CFLAGS)
dispatch_LDADD = $(BOOST_SYSTEM_LIBS) $(BOOST_LOG_LIBS) $(BOOST_UNIT_TEST_FRAMEWORK_LIBS) $(JSONCPP_LIBS)
dispatch_LDFLAGS = $(BOOST_SYSTEM_LDFLAGS) $(BOOST_LOG_LDFLAGS) $(BOOST_UNIT_TEST_FRAMEWORK_LDFLAGS) $(JSONCPP_LDFLAGS)

raftlog_SOURCES = raftlog-test.cpp ../raftlog.cpp

raftlog_CPPFLAGS = $(BOOST_CPPFLAGS) $(JSONCPP_CFLAGS)
raftlog_LDADD = $(BOOST_SYSTEM_LIBS) $(BOOST_LOG_LIBS) $(BOOST_UNIT_TEST_FRAMEWORK_LIBS) $(JSONCPP_LIBS)
raftlog_LDFLAGS = $(BOOST_SYSTEM_LDFLAGS) $(BOOST_LOG_LDFLAGS) $(BOOST_UNIT_TEST_FRAMEWORK_LDFLAGS) $(JSONCPP_LDFLAGS)

TESTS = $(check_PROGRAMS)
XFAIL_TESTS = remcon raftlog
