AM_CXXFLAGS = @AM_CXXFLAGS@ -I$(top_srcdir)/src/common
check_PROGRAMS = connection_pool dispatch raftlog raftstate raftclient persist changetx

connection_pool_SOURCES = connection_pool-test.cpp

connection_pool_LDADD = $(BOOST_SYSTEM_LIBS) $(BOOST_UNIT_TEST_FRAMEWORK_LIBS) $(BOOST_LOG_LIBS) $(BOOST_LOG_SETUP_LIBS)
connection_pool_LDFLAGS = $(BOOST_SYSTEM_LDFLAGS) $(BOOST_UNIT_TEST_FRAMEWORK_LDFLAGS) $(BOOST_LOG_LDFLAGS) $(BOOST_LOG_SETUP_LDFLAGS)

dispatch_SOURCES = dispatch-test.cpp ../../common/json_help.cpp

dispatch_CPPFLAGS = $(BOOST_CPPFLAGS) $(JSONCPP_CFLAGS)
dispatch_LDADD = $(BOOST_SYSTEM_LIBS) $(BOOST_LOG_LIBS) $(BOOST_UNIT_TEST_FRAMEWORK_LIBS) $(JSONCPP_LIBS) $(BOOST_LOG_LIBS) $(BOOST_LOG_SETUP_LIBS)
dispatch_LDFLAGS = $(BOOST_SYSTEM_LDFLAGS) $(BOOST_LOG_LDFLAGS) $(BOOST_UNIT_TEST_FRAMEWORK_LDFLAGS) $(JSONCPP_LDFLAGS) $(BOOST_LOG_LDFLAGS) $(BOOST_LOG_SETUP_LDFLAGS)

raftlog_SOURCES = raftlog-test.cpp ../raftlog.cpp ../../common/json_help.cpp

raftlog_CPPFLAGS = $(BOOST_CPPFLAGS) $(JSONCPP_CFLAGS)
raftlog_LDADD = $(BOOST_SYSTEM_LIBS) $(BOOST_LOG_LIBS) $(BOOST_FILESYSTEM_LIBS) $(BOOST_UNIT_TEST_FRAMEWORK_LIBS) $(JSONCPP_LIBS)
raftlog_LDFLAGS = $(BOOST_SYSTEM_LDFLAGS) $(BOOST_LOG_LDFLAGS) $(BOOST_FILESYSTEM_LDFLAGS) $(BOOST_UNIT_TEST_FRAMEWORK_LDFLAGS) $(JSONCPP_LDFLAGS)

raftstate_SOURCES = raftstate-test.cpp ../raftstate.cpp ../raftlog.cpp ../raftrpc.cpp ../../common/json_help.cpp

raftstate_CPPFLAGS = $(BOOST_CPPFLAGS) $(JSONCPP_CFLAGS)
raftstate_LDADD = $(BOOST_SYSTEM_LIBS) $(BOOST_LOG_LIBS) $(BOOST_FILESYSTEM_LIBS) $(BOOST_UNIT_TEST_FRAMEWORK_LIBS) $(JSONCPP_LIBS)
raftstate_LDFLAGS = $(BOOST_SYSTEM_LDFLAGS) $(BOOST_LOG_LDFLAGS) $(BOOST_FILESYSTEM_LDFLAGS) $(BOOST_UNIT_TEST_FRAMEWORK_LDFLAGS) $(JSONCPP_LDFLAGS)

raftclient_SOURCES = raftclient-test.cpp ../raftclient.cpp ../raftstate.cpp ../raftlog.cpp ../raftrpc.cpp ../../common/json_help.cpp

raftclient_CPPFLAGS = $(BOOST_CPPFLAGS) $(JSONCPP_CFLAGS)
raftclient_LDADD = $(BOOST_SYSTEM_LIBS) $(BOOST_LOG_LIBS) $(BOOST_FILESYSTEM_LIBS) $(BOOST_UNIT_TEST_FRAMEWORK_LIBS) $(JSONCPP_LIBS)
raftclient_LDFLAGS = $(BOOST_SYSTEM_LDFLAGS) $(BOOST_LOG_LDFLAGS) $(BOOST_FILESYSTEM_LDFLAGS) $(BOOST_UNIT_TEST_FRAMEWORK_LDFLAGS) $(JSONCPP_LDFLAGS)

persist_SOURCES = persist-test.cpp ../persist.cpp

persist_CPPFLAGS = $(BOOST_CPPFLAGS) $(LIBB64_CPPFLAGS)
persist_LDADD = $(BOOST_SYSTEM_LIBS) $(BOOST_LOG_LIBS) $(BOOST_FILESYSTEM_LIBS) $(BOOST_UNIT_TEST_FRAMEWORK_LIBS)
persist_LDFLAGS = $(BOOST_SYSTEM_LDFLAGS) $(BOOST_LOG_LDFLAGS) $(BOOST_FILESYSTEM_LDFLAGS) $(BOOST_UNIT_TEST_FRAMEWORK_LDFLAGS)

changetx_SOURCES = changetx-test.cpp ../changetx.cpp ../persist.cpp ../../common/json_help.cpp

changetx_CPPFLAGS = $(BOOST_CPPFLAGS) $(LIBB64_CPPFLAGS) $(JSONCPP_CFLAGS)
changetx_LDADD = $(BOOST_SYSTEM_LIBS) $(BOOST_LOG_LIBS) $(BOOST_FILESYSTEM_LIBS) $(BOOST_UNIT_TEST_FRAMEWORK_LIBS) $(JSONCPP_LIBS)
changetx_LDFLAGS = $(BOOST_SYSTEM_LDFLAGS) $(BOOST_LOG_LDFLAGS) $(BOOST_FILESYSTEM_LDFLAGS) $(BOOST_UNIT_TEST_FRAMEWORK_LDFLAGS) $(JSONCPP_LDFLAGS)

TESTS = $(check_PROGRAMS)
XFAIL_TESTS = changetx
